--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "pkg-placeholder",
+  "name": "spapi-listing-builder",
   "type": "module",
   "version": "0.0.0",
   "packageManager": "pnpm@9.9.0",
   "description": "_description_",
-  "author": "Anthony Fu <anthonyfu117@hotmail.com>",
+  "author": "wangjue666 <wangjuesix@gmail.com>",
   "license": "MIT",
-  "funding": "https://github.com/sponsors/antfu",
-  "homepage": "https://github.com/antfu/pkg-placeholder#readme",
+  "homepage": "https://github.com/sellerartifact/spapi-listing-builder#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/antfu/pkg-placeholder.git"
+    "url": "git+https://github.com/sellerartifact/spapi-listing-builder.git"
   },
-  "bugs": "https://github.com/antfu/pkg-placeholder/issues",
+  "bugs": "https://github.com/sellerartifact/spapi-listing-builder/issues",
   "keywords": [],
   "sideEffects": false,
   "exports": {
