--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spapi-listing-builder",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "packageManager": "pnpm@9.9.0",
   "description": "_description_",
   "author": "wangjue666 <wangjuesix@gmail.com>",
@@ -10,6 +10,9 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sellerartifact/spapi-listing-builder.git"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   },
   "bugs": "https://github.com/sellerartifact/spapi-listing-builder/issues",
   "keywords": [],
