--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 ignore-workspace-root-check=true
 shell-emulator=true
-registry=https://registry.npmmirror.com/
+#registry=https://registry.npmmirror.com/
