feat: 完成product的基础结构渲染

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,11 @@
     "lib": ["ESNext"],
     "module": "ESNext",
     "moduleResolution": "Bundler",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    },
     "resolveJsonModule": true,
     "strict": true,
     "strictNullChecks": true,
