--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spapi-listing-builder",
   "type": "module",
-  "version": "0.1.0-beta.5",
+  "version": "0.1.1",
   "packageManager": "pnpm@9.9.0",
   "description": "_description_",
   "author": "wangjue666 <wangjuesix@gmail.com>",
@@ -43,7 +43,7 @@
     "dev": "unbuild --stub",
     "lint": "eslint .",
     "prepublishOnly": "nr build",
-    "release": "bumpp && npm publish --registry https://registry.npmjs.org",
+    "release": "bumpp",
     "start": "esno src/index.ts",
     "test": "vitest",
     "typecheck": "tsc --noEmit",
