--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spapi-listing-builder",
   "type": "module",
-  "version": "0.1.2",
+  "version": "0.1.3-beta.1",
   "packageManager": "pnpm@9.9.0",
   "description": "_description_",
   "author": "wangjue666 <wangjuesix@gmail.com>",
